# crude-oil-hedging-linear-regression

./: README.md  app.py  pyproject.toml
data/: FUTURE_UK_IFEU_BRNF26.csv  FUTURE_UK_IFEU_GASF26.csv  FUTURE_US_XNYM_CLF26.csv  FUTURE_US_XNYM_HOF26.csv  FUTURE_US_XNYM_RBF26.csv
notebooks/: main.ipynb
src/hedging/: __init__.py  dashboard.py  data_cleaner.py  data_loader.py  hedging.py  portfolio_var.py  regression.py
