[project]
name = "commodity-heding-strategy"
version = "0.1.0"
description = "Commodity Heding Strategy"
authors = [
    {name = "el1825",email = "eric.liu125@imperial.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "dash (>=4.0.0,<5.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "hedging", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

